Nav-tabs double border fix
when pressed, it creates a double border at the right of the button

--- a/css/less/bootstrap/rules/tabs.less
+++ b/css/less/bootstrap/rules/tabs.less
@@ -51,8 +51,7 @@
         border-color: transparent;
         background-color: @brand-primary;
         border-bottom: 2px solid darken(@ls-light-color, 6%);
-        border-right: 1px solid darken(@ls-light-color, 12%);
-        border-left: none;
+        border-left: none; 
       }
     }
   }
