--- a/css/style.css
+++ b/css/style.css
@@ -7195,7 +7195,6 @@ button.close {
   border-color: transparent;
   background-color: #5da400;
   border-bottom: 2px solid #f0f0f0;
-  border-right: 1px solid #e0e0e0;
   border-left: none;
 }
 .table {
